# voice-agent-orchestrator

./: .env.example  .gitignore  README.md  RUNNING.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
apps/gateway/: package.json
apps/gateway/src/: deepgram-client.ts  http-server.ts  index.ts  orchestrator-client.ts  session-manager.ts  vad-client.ts  webhooks.ts  ws-server.ts
apps/orchestrator/: package.json
apps/orchestrator/src/: event-router.ts  index.ts  orchestrator.ts  server.ts  tool-runner.ts
apps/orchestrator/src/llm/: groq-client.ts
apps/orchestrator/src/tts/: eleven-labs-client.ts
apps/vad-service/: pyproject.toml  requirements.txt
apps/vad-service/app/: main.py  vad.py
apps/worker/: package.json
apps/worker/src/: index.ts  processor.ts  whatsapp.ts
