[project]
name = "vad-service"
version = "0.1.0"
description = "FastAPI VAD service for the voice collections agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn>=0.34.0",
  "pydantic>=2.11.3"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
